--- a/acercade.html
+++ b/acercade.html
@@ -21,6 +21,7 @@
             <li><a href="acercade.html">acerca de mi</a></li>
             <li><a href="juego.html">juego</a></li>
             <li><a href="preguntas.html">preguntas</a></li>
+            <li><a href="contacto.html">contacto</a></li>
         </ul>
     </nav>
 
