--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="acercade.html">acerca de mi</a></li>
             <li><a href="juego.html">juego</a></li>
             <li><a href="preguntas.html">preguntas</a></li>
+            <li><a href="contacto.html">contacto</a></li>
         </ul>
     </nav>
 
