--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keila Guerrero</title>
 </head>
 <body>
     <header>
-        <h1>Keila Guerrero</h1>
-    </header>
-
+        <h1 class="animated-title">
+            mi pagina
+            <img src="img/CURZA-logo.png" alt="Logo CURZA" class="curza-logo" />
+        </h1>
+    </header> 
+ 
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -33,5 +35,10 @@
     <footer>
         <p>&copy; 2024 Universidad Nacional del Comahue, nodo Sierra Colorada. Todos los derechos reservados.©</p>
     </footer>
+
+    <a href="#" class="back-to-top" id="backToTop">
+        &#8679; 
+    </a>
+
 </body>
 </html>
