--- a/juego.html
+++ b/juego.html
@@ -9,13 +9,20 @@
     <title>juego</title>
 </head>
 <body>
-    <h1>Preguntas</h1>
+    <header>
+        <h1 class="animated-title">
+            juego
+            <img src="img/CURZA-logo.png" alt="Logo CURZA" class="curza-logo" />
+        </h1>
+    </header>
+
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="acercade.html">acerca de mi</a></li>
             <li><a href="juego.html">juego</a></li>
             <li><a href="preguntas.html">preguntas</a></li>
+            <li><a href="contacto.html">contacto</a></li>
         </ul>
     </nav>
 
@@ -32,5 +39,10 @@
     <footer>
         <p>&copy; 2024 Universidad Nacional del Comahue, nodo Sierra Colorada. Todos los derechos reservados.©</p>
     </footer>
+
+    <a href="#" class="back-to-top" id="backToTop">
+        &#8679; 
+    </a>
+
 </body>
 </html>
